path find bug fix

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,8 @@
 
 если дорого около города, вставляем меш склада города, так же кинуть на него хитбокс города
 
+ceilMenu иконки через css
+
+
+
 anticheat Credit
