--- a/TODO.txt
+++ b/TODO.txt
@@ -5,3 +5,6 @@ ceilMenu иконки через css
 
 
 anticheat Credit
+
+
+добавить кнопку отмены хода машиной и если она в городе стоит и при нажатии на этот же город продавать ресурс
