some bugFixes and player color

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,3 +4,18 @@
 ceilMenu иконки через css
 
 anticheat Credit
+
+
+сохранение "заезженного" пути на фабрике
+
+?туннель в горе
+
+меню для покупки грузовиков
+
+когда исследует карту другое меню
+
+
+придумать маркировку зон
+
+
+end turn должен закрывать все меню, не закрыло truck turn
