--- a/TODO.txt
+++ b/TODO.txt
@@ -19,3 +19,15 @@ anticheat Credit
 
 
 end turn должен закрывать все меню, не закрыло truck turn
+
+
+
+
+
+
+
+
+
+
+уменьшить хитббокс города или с грузовиков не чистить увеедомления +
+БАГ грузовик не передвигается у других  +
