--- a/TODO.txt
+++ b/TODO.txt
@@ -1,33 +1,12 @@
 
-если дорого около города, вставляем меш склада города, так же кинуть на него хитбокс города
-
-ceilMenu иконки через css
-
-anticheat Credit
 
 
-сохранение "заезженного" пути на фабрике
 
-?туннель в горе
 
 меню для покупки грузовиков
 
-когда исследует карту другое меню
 
+грузовики цвета игрока
 
-придумать маркировку зон
-
-
-end turn должен закрывать все меню, не закрыло truck turn
-
-
-
-
-
-
-
-
-
-
-уменьшить хитббокс города или с грузовиков не чистить увеедомления +
-БАГ грузовик не передвигается у других  +
+отключать карточку кредита если он выплачен
+?апгрейд перекрестка чтобы был как город
