truck menu button

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,10 +3,14 @@
 
 
 
-меню для покупки грузовиков
 
 
 грузовики цвета игрока
 
 отключать карточку кредита если он выплачен
+таблицу лидеров
+
+
+
+
 ?апгрейд перекрестка чтобы был как город
