--- a/TODO.txt
+++ b/TODO.txt
@@ -1,16 +1,21 @@
 
 
 
-
-
-
-
-грузовики цвета игрока
-
-отключать карточку кредита если он выплачен
+до релиза:
 таблицу лидеров
+грузовики цвета игрока
+loginPage + mongoDB;
+возврат в игру;
+factories corner menu
+how to play;
 
 
 
 
+
+
+
+
+
+следующие версии:
 ?апгрейд перекрестка чтобы был как город
