--- a/TODO.txt
+++ b/TODO.txt
@@ -19,3 +19,10 @@ how to play;
 
 следующие версии:
 ?апгрейд перекрестка чтобы был как город
+
+
+
+
+!! MUST FIX Две фабрики в одном месте
+когда минус можно покупать грузовики
+с прошлой игры прилетают сокеты
