--- a/TODO.txt
+++ b/TODO.txt
@@ -22,7 +22,4 @@ how to play;
 
 
 
-
-!! MUST FIX Две фабрики в одном месте
-когда минус можно покупать грузовики
-с прошлой игры прилетают сокеты
+ при отправке грузовика, чтобы он сам искал маршрут
