--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,6 @@
 до релиза:
 таблицу лидеров
 грузовики цвета игрока
-loginPage + mongoDB;
 возврат в игру;
 factories corner menu
 how to play;
@@ -23,3 +22,6 @@ how to play;
 
 
 апдейт трак меню когда грузятся грузовики
+
+
+ЗАВТРА: Потребление продуктов в городе в процентах
